cli/src/browse/snapshots/snapshot_devices_tab.snap
---
source: cli/src/browse/view.rs
expression: buffer_to_string(&terminal)
---
Filesystem  Devices  Subvolumes  Scrub  Balance
[Usage]  Stats
/dev/mapper/braid-toshiba, ID: 1
  Device size:     5.46TiB
$ btrfs device usage /mnt/storage
q:quit | ?:help | r:reload | j/k:scroll | h/l:subtab
