cli/src/browse/snapshots/snapshot_filesystem_usage.snap
---
source: cli/src/browse/view.rs
expression: buffer_to_string(&terminal)
---
Filesystem  Devices  Subvolumes  Scrub  Balance
[Usage]  Show  Df
Overall:
    Device size:          10.91TiB
    Device allocated:       5.46TiB
    Used:                   4.20TiB
$ btrfs filesystem usage /mnt/storage
q:quit | ?:help | r:reload | j/k:scroll | h/l:subtab
