cli/src/browse/snapshots/snapshot_subvol_detail.snap
---
source: cli/src/browse/view.rs
expression: buffer_to_string(&terminal)
---
Filesystem  Devices  Subvolumes  Scrub  Balance
data
  Name:     data
  UUID:     abc-123
$ btrfs subvolume show /mnt/storage/data
q:quit | ?:help | r:reload | j/k:scroll | esc:back
